--- a/HeThongQuanLyMuaBanRemCua/HeThongQuanLyMuaBanRemCua.csproj
+++ b/HeThongQuanLyMuaBanRemCua/HeThongQuanLyMuaBanRemCua.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Database.cs" />
     <Compile Include="DataType.cs" />
+    <Compile Include="Interface.cs" />
+    <Compile Include="IO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools.cs" />
@@ -53,13 +55,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Curtains.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Receipts.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Users.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
